--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,19 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.btn {
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  font-size: 30px;
+  border: solid 1px;
+  cursor: pointer;
+}
+
+.btn-box {
+  display: flex;
+  justify-content: center;
+  padding-top: 25%;
+  gap: 10px;
+}
