--- a/src/css/common.css
+++ b/src/css/common.css
@@ -32,3 +32,39 @@ img {
   padding-top: 25%;
   gap: 10px;
 }
+
+input {
+  width: 200px;
+  height: 40px;
+  font-size: 22px;
+}
+
+button {
+  width: 80px;
+  height: 40px;
+  font-size: 24px;
+}
+
+.timer {
+  display: flex;
+  justify-content: space-between;
+  width: 280px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label {
+  top: 50px;
+  right: 0px;
+  font-size: 20px;
+}
+
+.value {
+  font-size: 40px;
+}
+
+
